      Porat - hpman28.
    * lang/*: Add missing messages, remove duplicates and no longer used.
    * libraries/sql_query_form.lib.php: Do not use strOr, drop file upload
      from normal SQL dialogs.
    * libraries/display_import.lib.php, libraries/file_listing.php: Sort file
      list on import tab, prepare generic framework to be used elsewhere (RFE
      #1303145).

2005-09-26 Sebastian Mendel <cybot_tm@users.sourceforge.net>
    * libraries/database_interface.lib.php: fixed bug in PMA_DBI_fetch_*()
      using PMA_DBI_num_rows() on unbuffered queries

2005-09-26 Michal Čihař  <michal@cihar.com>
    * libraries/export/sql.php: Fix constraint parsing (bug #1304600).
    * libraries/display_import.lib.php, libraries/import/csv.php: Rename
      plugin parameters to allow using same parameter by multiple plugins.
    * config.default.php, lang/*, libraries/import/ldi.php: Alternate LOAD
      DATA import plugin for CSV.
    * libraries/display_import.lib.php: Sort list of import plugins.
    * mult_submits.inc.php, tbl_properties_structure.php: Support for browsing
      selected columns (RFE #1275909).
    * libraries/common.lib.php: Do no try to parse empty SQL query (bug
      #1303994).
    * tbl_create.php, lang/*: Do not allow to create table that already exists
      (RFE #1255931).

2005-09-25 Marc Delisle  <lem9@users.sourceforge.net>
    * server_privileges.php: support MySQL 5 privileges 

2005-09-25 Michal Čihař  <michal@cihar.com>
    * lang/*: Messages for Sebastian.
    * lang/czech: Partial update.

2005-09-25 Sebastian Mendel <cybot_tm@users.sourceforge.net>
    * left.php, queryframe.php, libraries/common.lib.php,
      libraries/left_header.inc.php, css/phpmyadmin.css.php:
      grouping databases (bug #1281262)
    * server_status.php, libraries/common.lib.php, css/phpmyadmin.css.php:
      extended server status information with description and warnings,
      added PMA_formatNumber()
    * server_privilegs.php: fixed bug table not found